# mascot-scraper

./: .env.example  DOCKER.md  Dockerfile  README.md  clean-output.sh  docker-compose.yml  main.py  parser.py  pyproject.toml  run-docker.sh  scraper.py  utils.py
output/: mascot_fields.parquet  mascot_fiels.csv
src/mascot_scraper/: config.py  main.py  models.py  parser.py  utils.py
