[project]
name = "mascot-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastparquet>=2024.11.0",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
[tool.uv]
